package ch.admin.bj.swiyu.trust.management.modules.management.api;

import io.swagger.v3.oas.annotations.media.Schema;

@Schema(name = "DomainEventType", enumAsRef = true)
public enum DomainEventTypeDto {
    TRUST_ONBOARDING_SUBMISSION_RECEIVED,
    TRUST_ONBOARDING_SUCCEEDED,
    TRUST_ONBOARDING_REJECTED,
    TRUST_ONBOARDING_MORE_INFORMATION_REQUESTED,
    TRUST_ONBOARDING_RESUBMITTED,
    TASK_NOTE_ADDED,
    TASK_ASSIGNED,
    TRUST_ADD_DID_SUBMISSION_RECEIVED,
    TRUST_ADD_DID_SUCCEEDED,
    TRUST_ADD_DID_REJECTED,
    NON_COMPLIANT_ACTOR_ADDED,
    NON_COMPLIANT_ACTOR_REMOVED,
    PROTECTED_ISSUANCE_ENTRY_ADDED,
    PROTECTED_ISSUANCE_ENTRY_REMOVED,
    PROTECTED_VERIFICATION_AUTHORIZATION_ADDED,
    PROTECTED_VERIFICATION_AUTHORIZATION_REMOVED,
    PROTECTED_ISSUANCE_AUTHORIZATION_ADDED,
    PROTECTED_ISSUANCE_AUTHORIZATION_REMOVED,
    PROTECTED_VERIFICATION_REQUEST_RECEIVED,
    PROTECTED_VERIFICATION_REQUEST_APPROVED,
    PROTECTED_VERIFICATION_REQUEST_REJECTED,
}
