package ch.admin.bj.swiyu.trust.management.modules.management.domain.task;

public enum TaskStatus {
    REJECTED,
    ACCEPTED,
    OPENED,
    INFORMATION_REQUESTED,
    RESUBMITTED,
}
