package ch.admin.bj.swiyu.trust.management.modules.registry.domain;

public enum VcSchemaStatus {
    ACTIVATED,
    DEACTIVATED,
}
