@startuml domain-model
!pragma layout smetana
title Domain Model — swiyu-trust-management-service

' ==================== COMMON VALUE OBJECTS ====================
package "Common Value Objects" #EEEEFF {
  class AuditMetadata <<embeddable>> {
    + Instant createdAt
    + String createdBy
    + Instant lastModifiedAt
    + String lastModifiedBy
  }

  class NonCompliantReasonText <<embeddable>> {
    + String reasonDe
    + String reasonFr
    + String reasonIt
    + String reasonEn
    + String reasonRm
  }
}

' ==================== MANAGEMENT ====================
package "Management" #E8F5E9 {

  entity BusinessPartnerIdentity <<entity>> {
    + UUID id
    --
    + String uid
    + Boolean isRegisteredInCommercialRegister
    + Boolean isStateActor
    + String correspondingLanguage
    + Instant lastActivated
    + Instant lastIssuanceAt
    + Instant validUntil
    + Long version
    -- jsonb --
    + Map<String,String> entityName
    + Set<String> trustedIdentifier
    -- embedded --
    + AuditMetadata audit
  }

  enum BusinessPartnerIdentityStatus <<external>> {
    ACTIVE
    DEACTIVATED
  }

  entity Task <<entity>> {
    + UUID id
    --
    + UUID partnerId
    + Instant dueAt
    + Instant submittedAt
    + String assignee
    + Long version
    -- jsonb --
    + Map<String,String> partnerName
    -- embedded --
    + AuditMetadata audit
  }

  entity TrustOnboardingTask <<entity>> {
    + UUID trustOnboardingSubmissionId
    + Instant rejectionEnforcedAt
    + int timesResubmitted
  }

  entity TrustAddDidTask <<entity>> {
    + UUID trustAddDidSubmissionId
    + String permissionDid
  }

  enum TaskStatus {
    REJECTED
    ACCEPTED
    OPENED
    INFORMATION_REQUESTED
    RESUBMITTED
  }

  enum TaskType {
    REGISTRATION
    PROFILE_CHANGE
    RENEWAL
    ADD_DID
    PROTECTED_VERIFICATION_REQUEST
  }

  entity TrustStatementPartnerLink <<entity>> {
    + UUID id
    --
    + UUID partnerId
    + String subject
    + Instant validFrom
    + Instant validUntil
    + UUID trustRegistryEntryId
    + UUID trustIssuerCredentialId
    + UUID statusListMetadataId
    + Integer statusListIndex
    + UUID protectedIssuanceAuthorizationId
    -- jsonb --
    + TrustStatementDetails details
    -- embedded --
    + AuditMetadata audit
  }

  enum TrustStatementPartnerLinkStatus {
    CONFIRMED
    ACTIVE
    INACTIVE
  }

  enum TrustStatementPartnerLinkType {
    TRUST_STATEMENT_IDENTITY_V1
    TRUST_STATEMENT_ISSUANCE_V1
    TRUST_STATEMENT_VERIFICATION_V1
    TRUST_STATEMENT_IDENTITY_V2
    TRUST_STATEMENT_PROTECTED_VERIFICATION_AUTHORIZATION_V2
    TRUST_STATEMENT_PROTECTED_ISSUANCE_AUTHORIZATION_V2
    TRUST_LIST_STATEMENT_NON_COMPLIANCE_V2
    TRUST_LIST_STATEMENT_PROTECTED_ISSUANCE_V2
    PUBLIC_STATEMENT_VERIFICATION_QUERY_V2
  }

  entity StatusListMetadata <<entity>> {
    + UUID id
    --
    + int maxSize
    + Instant lastPublishedAt
    + String statusRegistryUrl
    -- embedded --
    + AuditMetadata audit
  }

  enum StatusListMetadataStatus {
    ACTIVE
    FULL
    DEACTIVATED
  }

  entity NonCompliantActor <<entity>> {
    + UUID id
    --
    + String did
    + Instant flaggedAsNonCompliantAt
    + Long version
    -- embedded --
    + NonCompliantReasonText reason
    + AuditMetadata audit
  }

  entity ProtectedIssuanceEntry <<entity>> {
    + UUID id
    --
    + String vct
    + Instant protectedAt
    -- jsonb --
    + Map<String,String> name
    -- embedded --
    + AuditMetadata audit
  }

  entity VcSchemaPartnerLink <<entity>> {
    + UUID id
    --
    + UUID vcSchemaId
    + UUID vcSchemaSubmissionId
    + UUID partnerId
    -- embedded --
    + AuditMetadata auditMetadata
  }

  entity DomainEventLog <<entity>> {
    + UUID id
    --
    + Instant triggeredAt
    + String triggeredBy
    + UUID TaskId
    + UUID nonCompliantActorId
    + UUID protectedIssuanceEntryId
    + UUID businessPartnerIdentityId
    + UUID protectedIssuanceAuthorizationId
    + UUID protectedVerificationAuthorizationId
    + String partnerNote
    + String internalNote
    -- embedded --
    + AuditMetadata auditMetadata
  }

  enum DomainEventType {
    BUSINESS_PARTNER_IDENTITY_ACTIVATED
    BUSINESS_PARTNER_IDENTITY_DEACTIVATED
    BUSINESS_PARTNER_IDENTITY_UPDATED
    TRUST_ONBOARDING_SUBMISSION_RECEIVED
    TRUST_ONBOARDING_SUCCEEDED
    TRUST_ONBOARDING_REJECTED
    TRUST_ONBOARDING_MORE_INFORMATION_REQUESTED
    TRUST_ONBOARDING_RESUBMITTED
    TRUST_ONBOARDING_TASK_NOTE_ADDED
    TRUST_ONBOARDING_TASK_ASSIGNED
    TRUST_ADD_DID_SUBMISSION_RECEIVED
    TRUST_ADD_DID_SUCCEEDED
    TRUST_ADD_DID_REJECTED
    PROTECTED_VERIFICATION_REQUEST_RECEIVED
    PROTECTED_VERIFICATION_REQUEST_APPROVED
    PROTECTED_VERIFICATION_REQUEST_REJECTED
    NON_COMPLIANT_ACTOR_ADDED
    NON_COMPLIANT_ACTOR_REMOVED
    PROTECTED_ISSUANCE_ENTRY_ADDED
    PROTECTED_ISSUANCE_ENTRY_REMOVED
    PROTECTED_VERIFICATION_AUTHORIZATION_ADDED
    PROTECTED_VERIFICATION_AUTHORIZATION_REMOVED
    PROTECTED_ISSUANCE_AUTHORIZATION_ADDED
    PROTECTED_ISSUANCE_AUTHORIZATION_REMOVED
  }

  enum StatementType {
    IDENTITY_TRUST_STATEMENT_V2
    VERIFICATION_QUERY_PUBLIC_STATEMENT_V2
    PROTECTED_VERIFICATION_AUTHORIZATION_TRUST_STATEMENT_V2
    PROTECTED_ISSUANCE_AUTHORIZATION_TRUST_STATEMENT_V2
    PROTECTED_ISSUANCE_TRUST_LIST_STATEMENT_V2
    NON_COMPLIANCE_TRUST_LIST_STATEMENT_V2
  }

  entity ProtectedVerificationAuthorization <<entity>> {
    + UUID id
    --
    + UUID businessPartnerIdentityId
    + ProtectedVerificationField protectedVerificationField
    -- embedded --
    + AuditMetadata audit
  }

  enum ProtectedVerificationField {
    AHV_NUMBER
  }

  entity ProtectedVerificationRequestTask <<entity>> {
    + UUID protectedVerificationSubmissionId
    + Instant zasDataOpenedAt
  }

  entity ProtectedIssuanceAuthorization <<entity>> {
    + UUID id
    --
    + UUID businessPartnerIdentityId
    + UUID protectedIssuanceEntryId
    -- jsonb --
    + Map<String,String> reason
    -- embedded --
    + AuditMetadata audit
  }

  ' Relationships within Management
  BusinessPartnerIdentity --> BusinessPartnerIdentityStatus : status
  Task --> TaskStatus : status
  Task --> TaskType : taskType
  TrustOnboardingTask --|> Task
  TrustAddDidTask --|> Task
  ProtectedVerificationRequestTask --|> Task
  TrustStatementPartnerLink --> TrustStatementPartnerLinkStatus : status
  TrustStatementPartnerLink --> TrustStatementPartnerLinkType : type
  StatusListMetadata --> StatusListMetadataStatus : status
  DomainEventLog --> DomainEventType : eventType
  ProtectedVerificationAuthorization --> ProtectedVerificationField : protectedVerificationField
}

' ==================== REGISTRY ====================
package "Registry" #EFEBE9 {

  entity DatastoreEntity <<entity>> {
    + UUID id
    -- embedded --
    + AuditMetadata auditMetadata
  }

  enum DatastoreStatus {
    ACTIVE
    DEACTIVATED
    DISABLED
    SETUP
  }

  entity NonComplianceList <<entity>> {
    + UUID id
    --
    + Instant publishedAt
    + Long version
    + String payload
    -- embedded --
    + AuditMetadata auditMetadata
  }

  entity Statement <<entity>> {
    + UUID id
    --
    + boolean isSoftDeleted
    + boolean isActiveInStatuslist
    + String serialized
    -- jsonb --
    + JsonNode data
    -- embedded --
    + AuditMetadata audit
  }

  enum StatementType {
    IDENTITY_TRUST_STATEMENT_V2
    VERIFICATION_QUERY_PUBLIC_STATEMENT_V2
    PROTECTED_VERIFICATION_AUTHORIZATION_TRUST_STATEMENT_V2
    PROTECTED_ISSUANCE_AUTHORIZATION_TRUST_STATEMENT_V2
    PROTECTED_ISSUANCE_TRUST_LIST_STATEMENT_V2
    NON_COMPLIANCE_TRUST_LIST_STATEMENT_V2
  }

  entity VcEntity <<entity>> {
    + Long id
    --
    + UUID datastoreEntityId
    + String rawVc
    -- jsonb --
    + JsonNode vcPayload
    -- embedded --
    + AuditMetadata audit
  }

  entity VcSchema <<entity>> {
    + UUID id
    --
    + String path
    + String file
    -- embedded --
    + AuditMetadata audit
  }

  enum VcSchemaStatus {
    ACTIVATED
    DEACTIVATED
  }

  ' Relationships within Registry
  DatastoreEntity --> DatastoreStatus : status
  Statement --> StatementType : type
  VcEntity }o--|| DatastoreEntity : "datastoreEntityId"
  VcSchema --> VcSchemaStatus : status
}

' ==================== CROSS-MODULE RELATIONSHIPS ====================
TrustStatementPartnerLink }o--o| StatusListMetadata : "statusListMetadataId"
VcSchemaPartnerLink }o--|| VcSchema : "vcSchemaId"
ProtectedVerificationAuthorization }o--|| BusinessPartnerIdentity : "businessPartnerIdentityId"
ProtectedIssuanceAuthorization }o--|| BusinessPartnerIdentity : "businessPartnerIdentityId"
ProtectedIssuanceAuthorization }o--|| ProtectedIssuanceEntry : "protectedIssuanceEntryId"
TrustStatementPartnerLink }o--o| ProtectedIssuanceAuthorization : "protectedIssuanceAuthorizationId"

@enduml

